create animation and random variables for images

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <div class="ballon-animation">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+        <img class="ballon-animation__image ballon-animation__image--ballon"src="img/ballon.svg" ratioX="0.2" ratioY="0.2" alt="ballon">
+        <img class="ballon-animation__image ballon-animation__image--cloud"src="img/cloud.svg" ratioX="0.2" ratioY="0.2" alt="cloud">
+        <img class="ballon-animation__image ballon-animation__image--cloud"src="img/cloud.svg" ratioX="0.2" ratioY="0.2" alt="cloud">
+        <img class="ballon-animation__image ballon-animation__image--cloud"src="img/cloud.svg" ratioX="0.2" ratioY="0.2" alt="cloud">
+        <img class="ballon-animation__image ballon-animation__image--cloud"src="img/cloud.svg" ratioX="0.2" ratioY="0.2" alt="cloud">
+        <img class="ballon-animation__image ballon-animation__image--cloud"src="img/cloud.svg" ratioX="0.2" ratioY="0.2" alt="cloud">
+        <img class="ballon-animation__image ballon-animation__image--cloud"src="img/cloud.svg" ratioX="0.2" ratioY="0.2" alt="cloud">
     </div>
 </body>
 </html>
